--- a/p3/webapp/local.html
+++ b/p3/webapp/local.html
@@ -7,9 +7,10 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
+            padding-left: 430px;
             background-color: #FFF7ED;
         }
+     
 
         .logo {
             display: flex;
@@ -17,11 +18,6 @@
             margin-bottom: 20px;
         }
 
-        .logo img {
-            width: 40px;
-            height: 40px;
-            margin-right: 10px;
-        }
 
         h1 {
             font-size: 24px;
